kubernetes/main-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-api
  namespace: main-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-api
  template:
    metadata:
      labels:
        app: main-api
    spec:
      imagePullSecrets:
        - name: ecr-creds
      containers:
      - name: main-api
        image: 989419672395.dkr.ecr.eu-west-2.amazonaws.com/kantox/challenge:main-api-a3f2701
        imagePullPolicy: Always
        ports:
        - containerPort: 6000
