kubernetes/main-api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: main-api-stripprefix
  namespace: main-api
spec:
  stripPrefix:
    prefixes:
      - /main-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-api-ingress
  namespace: main-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: main-api-main-api-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /main-api
        pathType: Prefix
        backend:
          service:
            name: main-api
            port:
              number: 6000
